working with modified shapefile info now

--- a/webwork/sample.html
+++ b/webwork/sample.html
@@ -7,13 +7,38 @@
 
         <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
         <script type="text/javascript" src="us-states.js"></script>
-<script type="text/javascript" src="../shapefiles/sandiego_city_blockgroups.js"></script>
+<script type="text/javascript" src="../shapefiles/sandiego_city_blockgroups_modeladded.js"></script>
 
 <style>
 
 
 
 #mapid { height: 600px;}
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
 
 </style>
 </head>
@@ -34,7 +59,7 @@
 <script>
 
 
-		var mymap = L.map('mapid').setView([32.7157, -117.1611], 11);
+		var mymap = L.map('mapid').setView([32.7157, -117.1611], 10);
 
 		L.tileLayer('https://api.mapbox.com/styles/v1/katiesch/cithpugkf002c2jplgp9r4phm/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw', {
 			maxZoom: 18,
@@ -45,7 +70,112 @@
                         accessToken: 'pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw'
 		}).addTo(mymap);
 
-                L.geoJson(bgData).addTo(mymap);
+		// control that shows state info on hover
+		var info = L.control();
+
+ info.onAdd = function (mymap) {
+    this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
+    this.update();
+    return this._div;
+};
+
+// method that we will use to update the control based on feature properties passed
+info.update = function (props) {
+    this._div.innerHTML = '<h4>Land Area</h4>' +  (props ?
+        '<b>Tract ' + props.TRACTCE + '</b><br />' + '<b>' + props.NAMELSAD + '</b><br />' + props.ALAND + 'm<sup>2</sup>'
+        : 'Hover over a state');
+};
+
+info.addTo(mymap);
+
+ 
+ // get color depending on population density value
+		function getColor(d) {
+			return d > 1000000 ? '#800026' :
+			       d > 500000  ? '#BD0026' :
+			       d > 200000  ? '#E31A1C' :
+			       d > 100000  ? '#FC4E2A' :
+			       d > 50000   ? '#FD8D3C' :
+			       d > 20000   ? '#FEB24C' :
+			       d > 10000   ? '#FED976' :
+			                  '#FFEDA0';
+		}
+
+function style(feature) {
+    return {
+        fillColor: getColor(feature.properties.MEDIAN_HOU),
+        weight: 0.5,
+        opacity: 1,
+        color: 'black',
+        dashArray: '0',
+        fillOpacity: 0.4
+    };
+}
+		function highlightFeature(e) {
+			var layer = e.target;
+
+			layer.setStyle({
+				weight: 1,
+				color: 'white',
+				dashArray: '',
+				fillOpacity: 0.7
+			});
+
+			if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+				layer.bringToFront();
+			}
+
+			info.update(layer.feature.properties);
+		}
+
+ 
+var geojson;
+ 
+                geoJson = L.geoJson(bgData, {style:style}).addTo(mymap);
+                <!--geoJson = L.geoJson(statesData, {style:style}).addTo(mymap);-->
+
+ function resetHighlight(e) {
+    geojson.resetStyle(e.target);
+    info.update(); 
+}
+function zoomToFeature(e) {
+    mymap.fitBounds(e.target.getBounds());
+}
+
+ function onEachFeature(feature, layer) {
+    layer.on({
+        mouseover: highlightFeature,
+        mouseout: resetHighlight,
+        click: zoomToFeature
+    });
+}
+
+geojson = L.geoJson(bgData, {
+    style: style,
+    onEachFeature: onEachFeature
+}).addTo(mymap);
+
+
+var legend = L.control({position: 'bottomright'});
+
+legend.onAdd = function (mymap) {
+
+    var div = L.DomUtil.create('div', 'info legend'),
+        grades = [0, 10000, 20000, 50000, 100000, 200000, 500000, 1000000],
+        labels = [];
+
+    // loop through our density intervals and generate a label with a colored square for each interval
+    for (var i = 0; i < grades.length; i++) {
+        div.innerHTML +=
+            '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+            grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+    }
+
+    return div;
+};
+
+legend.addTo(mymap);
+
 	</script>
 
  </body>
