--- a/webwork/sample.html
+++ b/webwork/sample.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head>
+<html>
+<head>
         <meta charset="utf-8">
         <title>Sample Web</title>
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+        <link rel="stylesheet" href="http://humangeo.github.com/leaflet-dvf/dist/css/dvf.css" type="text/css" media="screen"/>
 
         <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
         <script type="text/javascript" src="us-states.js"></script>
-<script type="text/javascript" src="../shapefiles/sandiego_city_blockgroups_modeladded.js"></script>
+        <script type="text/javascript" src="../shapefiles/sandiego_city_blockgroups_modeladded.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
 
 <style>
-
-
 
 #mapid { height: 600px;}
 
@@ -46,34 +47,41 @@
 <body>
 <h1>Sample Web Page</h1>
 
-
 <p>lorem ipsum.</p>
+
+<div class="options"><select id="field-select">
+  <option value="MEDIAN_HOU" selected>Median Household Income</option> 
+  <option value="ALAND">Land Area</option>
+  <option value="value3">Value 3</option>
+</select>
+</div>
 
     
 </br>
 </br>
 
  <div id="mapid"></div>
+ 
 
 
 <script>
 
 
-		var mymap = L.map('mapid').setView([32.7157, -117.1611], 10);
+var mymap = L.map('mapid').setView([32.7157, -117.1611], 10);
 
-		L.tileLayer('https://api.mapbox.com/styles/v1/katiesch/cithpugkf002c2jplgp9r4phm/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'katiesch.Light',
-                        accessToken: 'pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw'
-		}).addTo(mymap);
+L.tileLayer('https://api.mapbox.com/styles/v1/katiesch/cithpugkf002c2jplgp9r4phm/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw', {
+        maxZoom: 18,
+	attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+	'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+	'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+	id: 'katiesch.Light',
+        accessToken: 'pk.eyJ1Ijoia2F0aWVzY2giLCJhIjoiY2l0aHBjaXZ1MDJmNDJzbnZzdTNvNHNyNCJ9.aW1smbPjspISZmPnvMTFTw'
+	}).addTo(mymap);
 
-		// control that shows state info on hover
-		var info = L.control();
+// control that shows state info on hover
+var info = L.control();
 
- info.onAdd = function (mymap) {
+info.onAdd = function (mymap) {
     this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
     this.update();
     return this._div;
@@ -83,24 +91,13 @@
 info.update = function (props) {
     this._div.innerHTML = '<h4>Land Area</h4>' +  (props ?
         '<b>Tract ' + props.TRACTCE + '</b><br />' + '<b>' + props.NAMELSAD + '</b><br />' + props.ALAND + 'm<sup>2</sup>'
-        : 'Hover over a state');
+        : 'Hover over a blockgroup');
 };
 
 info.addTo(mymap);
-
  
- // get color depending on population density value
-		function getColor(d) {
-			return d > 1000000 ? '#800026' :
-			       d > 500000  ? '#BD0026' :
-			       d > 200000  ? '#E31A1C' :
-			       d > 100000  ? '#FC4E2A' :
-			       d > 50000   ? '#FD8D3C' :
-			       d > 20000   ? '#FEB24C' :
-			       d > 10000   ? '#FED976' :
-			                  '#FFEDA0';
-		}
-
+var getColor = chroma.scale(['#FFEDA0', '#800026']).domain([Math.min(0,5), 100000]);
+ 
 function style(feature) {
     return {
         fillColor: getColor(feature.properties.MEDIAN_HOU),
@@ -111,22 +108,23 @@ function style(feature) {
         fillOpacity: 0.4
     };
 }
-		function highlightFeature(e) {
-			var layer = e.target;
+ 
+function highlightFeature(e) {
+	var layer = e.target;
 
-			layer.setStyle({
-				weight: 1,
-				color: 'white',
-				dashArray: '',
-				fillOpacity: 0.7
+	layer.setStyle({
+			weight: 1,
+			color: 'white',
+			dashArray: '',
+			fillOpacity: 0.7
 			});
 
-			if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-				layer.bringToFront();
-			}
+	if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+		layer.bringToFront();
+	}
 
-			info.update(layer.feature.properties);
-		}
+	info.update(layer.feature.properties);
+}
 
  
 var geojson;
