--- a/webwork/sandiego_blog.html
+++ b/webwork/sandiego_blog.html
@@ -154,18 +154,23 @@
 
 <div class="options"><select id="field-select">
   <option value="MEDIAN_HOU" selected>Median Household Income</option> 
-  <option value="ALAND">Land Area</option>
-  <option value="GRAFFITI_P">Fraction of Reports Graffiti-Related</option>
-  <option value="PREDICTED_">Predicted Fraction of Reports Graffiti-Related</option>
+  <option value="LAND_AREA">Land Area (square miles)</option>
+  <option value="GRAFFITI_P">Percent of Reports Graffiti-Related</option>
+  <option value="PREDICTED_">Predicted Percent of Reports
+  Graffiti-Related</option>
+  <option value="COMBINED_L">Percentage of Actual and Predicted
+  Reports Graffiti-Related</option>
   <option value="TOTAL_POP">Total Population</option>
-  <option value="REP_PER_CA">311 Reports per Capita</option>
-  <option value="WHITE_PER">Caucasian Fraction of Population</option>
-  <option value="LATIN_PER">Hispanic/Latino Fraction of Population</option>
+  <option value="POPULATION">Population Density (per square mile)</option>
+  <option value="REP_PER_CA">311 Reports per 1000 people</option>
+  <option value="WHITE_PER">Caucasian Percentage of Population</option>
+  <option value="LATIN_PER">Hispanic/Latino Percentage of Population</option>
   <option value="MEDIAN_AGE">Median Age</option>
-  <option value="LIMITED_EN">Fraction of Households with Limited English</option>
-  <option value="TREE_DENSI">Tree Density</option>
-  <option value="CRIME_PER_">Crime per Capita</option>
-  <option value="AP_COUNT">Number of Abandoned Properties</option>
+  <option value="LIMITED_EN">Percentage of Households with Limited English</option>
+  <option value="TREE_DENSI">Tree Density (per square mile)</option>
+  <option value="SL_DENSITY">Streetlight Density (per square mile)</option>
+  <option value="CRIME_PER_">Crime Events per 1000 people</option>
+  <option value="COUNT">Number of 311 Reports</option>
   <!--<option value=""></option>-->
 </select>
 </div>
